feature: use enum from java classes
