# src/main/java/com/project1/ms_customer_service/exception/GlobalExceptionHandler.java
@@ -42,4 +42,12 @@ public class GlobalExceptionHandler {
         return Mono.just(ResponseEntity.status(HttpStatus.NOT_FOUND)
                 .body(responseBase));
     }
+
+    @ExceptionHandler(InvalidCustomerTypeException.class)
+    public Mono<ResponseEntity<ResponseBase>> handleInvalidCustomerTypeException(Exception ex) {
+        ResponseBase responseBase = new ResponseBase();
+        responseBase.setMessage(ex.getMessage());
+        return Mono.just(ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body(responseBase));
+    }
 }
